--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-shap
-pandas
-numpy
-scikit-learn
-matplotlib
-streamlit-shap
+streamlit==1.37.1
+shap==0.46.0
+pandas==2.2.2
+numpy==2.0.1
+scikit-learn==1.5.1
+matplotlib==3.9.2
+streamlit-shap==1.0.2
